applications/lumie/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumie-frontend-main
  namespace: lumie-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/plugins: lumie-cors
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - lumie.lumie-infra.com
      secretName: lumie-frontend-tls
  rules:
    - host: lumie.lumie-infra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumie-frontend
                port:
                  number: 3000
